Archive2/81/d47f8a24e305f6/output
main.cpp:10:24: error: no matching literal operator for call to 'operator "" ;' with argument of type 'char'
        os << el << ' ';
                       ^
main.cpp:19:6: error: expected ';' at end of declaration
    };
     ^
     ;
2 errors generated.
